@@ -2,5 +2,6 @@
 #define WIN_PALETTE_H
 
 void ConfigPalette();
+bool SetPalette(const char* nameo);
 
 #endif
